<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
    <TextView android:layout_gravity="right" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/TextHistory" android:gravity="right|center" android:inputType="textCapWords|textMultiLine" android:layout_weight="0.3"></TextView>
    <View android:background="@drawable/gradient" android:layout_width="wrap_content" android:layout_height="1dp" android:id="@+id/line1"></View>
    <TextView android:gravity="right|center" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/TextValue" android:inputType="text" android:layout_weight="0.1"></TextView>
    <View
        android:layout_width="wrap_content"
        android:background="@drawable/gradient"
        android:layout_height="1dp" android:id="@+id/line2"></View>
	<LinearLayout android:layout_width="match_parent"
		android:orientation="horizontal" android:layout_height="wrap_content" android:layout_weight="0.6">
		<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/tableLayout" android:layout_height="match_parent"
			android:layout_width="match_parent" android:layout_weight="1">
			<TableRow android:layout_height="match_parent"
				android:layout_weight="1" android:layout_width="wrap_content"
				android:id="@+id/TableRow06">
				<Button android:text="@string/widget_all_clear" android:id="@+id/ButtonAC" android:layout_weight="1" android:layout_height="match_parent" android:layout_width="match_parent"></Button>
				<Button android:layout_height="match_parent"
					android:layout_weight="1" android:layout_width="match_parent" android:text="@string/widget_eval_open" android:id="@+id/ButtonEvalOpen"></Button>
				<Button android:layout_height="match_parent"
					android:layout_weight="1" android:layout_width="match_parent" android:text="@string/widget_eval_close" android:id="@+id/ButtonEvalClose"></Button>
			</TableRow>
			<TableRow android:layout_height="match_parent"
				android:layout_weight="1" android:layout_width="match_parent"
				android:id="@+id/TableRow05">
				<Button android:layout_weight="1" android:layout_height="match_parent" android:layout_width="match_parent" android:text="@string/widget_percentage" android:id="@+id/ButtonPercentage"></Button>
				<Button android:layout_height="match_parent"
					android:layout_weight="1" android:layout_width="match_parent" android:text="@string/widget_negative" android:id="@+id/ButtonNegative"></Button>
				<Button android:layout_height="match_parent"
					android:layout_weight="1" android:layout_width="match_parent" android:text="@string/widget_divide" android:id="@+id/ButtonDivide"></Button>
			</TableRow>
			<TableRow android:layout_height="match_parent"
				android:layout_weight="1" android:layout_width="match_parent"
				android:id="@+id/TableRow04">
				<Button android:layout_height="match_parent"
					android:layout_weight="1" android:layout_width="match_parent" android:text="@string/widget_seven" android:id="@+id/Button07"></Button>
				<Button android:layout_height="match_parent"
					android:layout_weight="1" android:layout_width="match_parent" android:text="@string/widget_eight" android:id="@+id/Button08"></Button>
				<Button android:layout_height="match_parent"
					android:layout_weight="1" android:layout_width="match_parent" android:text="@string/widget_nine" android:id="@+id/Button09"></Button>
			</TableRow>
			<TableRow android:layout_height="match_parent"
				android:layout_weight="1" android:layout_width="match_parent"
				android:id="@+id/TableRow03">
				<Button android:layout_height="match_parent"
					android:layout_weight="1" android:layout_width="match_parent" android:text="@string/widget_four" android:id="@+id/Button04"></Button>
				<Button android:layout_height="match_parent"
					android:layout_weight="1" android:layout_width="match_parent" android:text="@string/widget_five" android:id="@+id/Button05"></Button>
				<Button android:layout_height="match_parent"
					android:layout_weight="1" android:layout_width="match_parent" android:text="@string/widget_six" android:id="@+id/Button06"></Button>
			</TableRow>
			<TableRow android:layout_height="match_parent"
				android:layout_width="wrap_content" android:id="@+id/TableRow02"
				android:layout_weight="1">
				<Button android:layout_width="match_parent" android:layout_weight="1"
					android:layout_height="match_parent" android:text="@string/widget_one" android:id="@+id/Button01"></Button>
				<Button android:layout_height="match_parent"
					android:layout_width="match_parent"
					android:layout_weight="1" android:text="@string/widget_two" android:id="@+id/Button02"></Button>
				<Button android:layout_height="match_parent"
					android:layout_width="match_parent"
					android:layout_weight="1" android:text="@string/widget_three" android:id="@+id/Button03"></Button>
			</TableRow>
			<TableRow android:id="@+id/TableRow01"
				android:layout_height="match_parent" android:layout_width="match_parent"
				android:layout_weight="1">
				<Button android:layout_height="match_parent"

					android:text="@string/widget_zero" android:id="@+id/Button00" android:layout_width="match_parent" android:layout_weight="0.8"></Button>
				<Button android:layout_height="match_parent"
					android:layout_width="match_parent"
					android:text="@string/widget_decimal" android:id="@+id/ButtonDecimal" android:layout_weight="0.2"></Button>
			</TableRow>
		</TableLayout>
		<LinearLayout android:layout_width="match_parent"
			android:id="@+id/linearLayout" android:orientation="vertical"
			android:layout_weight="3" android:layout_height="match_parent">
			<Button android:layout_height="match_parent"
				android:layout_width="match_parent"
				android:layout_weight="1" android:text="@string/widget_back" android:id="@+id/ButtonBack"></Button>
			<Button android:layout_height="match_parent"
				android:layout_width="match_parent"
				android:layout_weight="1" android:text="@string/widget_multiple" android:id="@+id/ButtonMutiple"></Button>
			<Button android:layout_height="match_parent"
				android:layout_width="match_parent"
				android:layout_weight="1" android:text="@string/widget_minus" android:id="@+id/ButtonMinus"></Button>
			<Button android:layout_height="match_parent"
				android:layout_width="match_parent"
				android:layout_weight="1" android:text="@string/widget_plus" android:id="@+id/ButtonPlus"></Button>
			<Button android:layout_height="match_parent"
				android:layout_width="match_parent"
				android:layout_weight="0.8" android:text="@string/widget_equal" android:id="@+id/ButtonEqual"></Button>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>